# crabcakes

./: .dockerignore  .eslintrc.json  .gitignore  .semgrepignore  .stylelintrc.json  .swcrc  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SIGV4_INTEGRATION_PLAN.md  SIGV4_STATUS.md  TODO.md  bacon.toml  build-aws-sdk.js  build-js.js  clippy.toml  configuration.html  database.html  development.html  index.html  inner_setup_test.sh  inner_test_main.sh  inner_test_pkill_instance.sh  justfile  manual_test.sh  package.json  playwright.config.mjs  pnpm-lock.yaml  policies.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-0bbc16bd.js  searchindex.js  test_multipart.sh  test_tagging.sh  (+7 more)
.github/: CONTRIBUTING.md
.github/workflows/: book.yml  book2.yml  build_container.yml  clippy.yml  codeql.yml  dependabot_auto_merge.yml  js-checks.yml  rust_test.yml  shellcheck.yml
crabcakes-async-spooled-tempfile/: CHANGELOG.md  Cargo.toml  README.md
crabcakes-async-spooled-tempfile/src/: lib.rs
credentials/: alice.json  bob.json
docs/: book.toml
docs/src/: SUMMARY.md  configuration.md  database.md  development.md  policies.md
notes/: aws_v4_sigs.md
scripts/: git-pre-commit.sh
scripts/integration/: inner_setup_test.sh  inner_test_main.sh  test_multipart.sh  test_tagging.sh  test_website.sh
secret_string/: Cargo.toml  README.md
secret_string/src/: lib.rs
src/: async_spooled_tempfile.rs  auth.rs  body_buffer.rs  cleanup.rs  cli.rs  constants.rs  credentials.rs  error.rs  filesystem.rs  lib.rs  logging.rs  main.rs  multipart.rs  policy.rs  policy_analyzer.rs  request_handler.rs  router.rs  s3_handlers.rs  server.rs  web_handlers.rs  web_service.rs  xml_responses.rs
src/auth/: mod.rs  oauth.rs  sigv4.rs
src/db/: cleanup.rs  mod.rs  service.rs
src/db/entities/: bucket_website_config.rs  mod.rs  oauth_pkce_state.rs  object_tags.rs  temporary_credentials.rs
src/db/migration/: m20250103_000001_create_object_tags.rs  m20250104_000001_create_oauth_pkce_state.rs  m20250104_000002_create_temporary_credentials.rs  m20250119_000001_create_bucket_website_configs.rs  mod.rs
src/js/: bucket-crud.ts  bucket-operations.ts  bucket-settings.ts  credential-crud.js  credential-crud.ts  csrf.js  csrf.ts  error.js  error.ts  logout.js  logout.ts  policy-action.ts  policy-crud.js  policy-crud.ts  profile.js  profile.ts  shared.ts  system.ts  troubleshooter.ts
src/js/tests/: bucket-operations.test.ts  setup.ts
src/tests/: db_tests.rs  mod.rs  multipart_tests.rs  policy_tests.rs  request_handler_tests.rs  server_tests.rs  web_handlers_tests.rs
src/web/: handlers.rs  mod.rs  s3_handlers.rs  serde.rs  service.rs  templates.rs  xml_responses.rs
static/: prism.js
static/css/: admin.css  prism.css
static/js/: bucket-crud.js  bucket-operations-src.js  bucket-operations.js  bucket-settings.js  credential-crud.js  csrf.js  error.js  logout.js  policy-action.js  policy-crud.js  profile.js  shared.js  system.js  troubleshooter.js
templates/: admin.html  bucket_delete.html  bucket_detail.html  bucket_form.html  bucket_settings.html  buckets.html  credential_detail.html  credential_form.html  credentials.html  error.html  identities.html  identity_detail.html  layout.html  logout_button.html  policies.html  policy_detail.html  policy_form.html  profile.html  system.html  troubleshooter.html
test_config/policies/: alice.json  allow-all.json  testuser.json
test_credentials/: testuser.json
test_policies/: alice.json
testfiles/bucket1/testuser/: test.txt
testfiles/bucket2/testuser/: hello-world.json
testfiles/bucket_no_index_but_error/: error.html
testfiles/bucket_with_index_and_error/: error.html  index.html
testfiles/bucket_with_index_only/: index.html
tests/: server_tests.rs
tests/js/: policy-action.test.mjs
tests/playwright/: credential-form.spec.mjs
