
[workspace]
members = ["."]

[workspace.package]
version = "0.0.1-dev"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/yaleman/crabcakes"
homepage = "https://github.com/yaleman/crabcakes"


[package]
name = "crabcakes"
description = "Rusty little S3-compatible object storage server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
