
[workspace]
members = ["crabcakes-async-spooled-tempfile", "secret_string", "."]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/yaleman/crabcakes"
homepage = "https://github.com/yaleman/crabcakes"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["io-util", "fs"] }
tempfile = "3.23"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.15.0" }

[package]
name = "crabcakes"
description = "Rusty little S3-compatible object storage server"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]

crabcakes-async-spooled-tempfile = { version = "0.0.1" }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.17", features = [
    "tokio",
    "http1",
    "http2",
    "server",
] }
scratchstack-aws-signature = { git = "https://github.com/yaleman/scratchstack-aws-signature", rev = "d80753418d2e08520c07692faa5b1e54eb4154e2", features = [
    "streaming",
] }

# scratchstack-aws-signature = { path = "../scratchstack-aws-signature", features = [
#     "streaming",
# ] }
# scratchstack-aws-signature = "0.11.3"
scratchstack-aws-principal = "0.4.9"
# iam-rs = "0.0.23" # pending https://github.com/Foorack/iam-rs/pull/8
iam-rs = { rev = "65dabe70638b058c8431345f29c51702919faee1", git = "https://github.com/yaleman/iam-rs/", version = "0.0.23" }
mime_guess = "2.0"
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "signal",
] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper-rustls = { version = "0.27.7", features = ["http2"] }
rustls = { version = "0.23.32", features = ["aws-lc-rs", "zlib"] }
rustls-pemfile = "2.2.0"
tokio-rustls = { version = "0.26.4", features = ["zlib", "aws-lc-rs"] }
num_cpus = "1.17.0"
hmac = "0.12.1"
uuid = { version = "1.18.1", features = ["v4"] }
md5 = "0.8.0"
sea-orm = { version = "1.1.16", features = [
    "sqlx-sqlite",
    "with-chrono",
    "runtime-tokio-rustls",
    "macros",
    "mock",
] }
sea-orm-migration = { version = "1.1.16", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
openidconnect = "4.0.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", default-features = false, features = [
    "h2",
    "rustls-tls-webpki-roots",
] }
form_urlencoded = "1.2.2"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
askama = "0.14.0"
tower-http = { version = "0.6.6", features = ["compression-gzip", "trace"], default-features = false }
scratchstack-arn = "0.4.9"
futures = "0.3.31"
serde_with = { workspace = true, features = ["json"] }
enum-iterator = "2.3.0"
regex = "1.11.3"
urlencoding = "2.1.3"
secret-string = { version = "0.0.2", path = "secret_string", features = [
    "serde",
] }

[dev-dependencies]
aws-config = "1.8.8"
aws-sdk-s3 = "1.108.0"
tokio-test = "0.4"
